[package]
name = "solana-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.10.32"
thiserror = "1.0"
base58 = "0.1"
bs58 = "0.5"
base64 = "0.22"
ed25519-dalek = "1.0"
rand = "0.8"
spl-token = "3.5.0"
